Bug 780965: Use C-style instead of C++-style comments in JS headers included by .c files. r=jorendorff